add updateActiveBoard
