# controllers/users/currentUser.js
@@ -1,10 +1,11 @@
 const currentUser = async (req, res) => {
-  const { email, name, theme, avatarURL, _id: id } = req.user;
+  const { email, name, theme, avatarURL, activeBoard, _id: id } = req.user;
   res.json({
     name,
     email,
-    avatarURL,
     theme,
+    avatarURL,
+    activeBoard,
   });
 };
 
